Fix horizontal scroll issue

--- a/src/stylus/portfolio.styl
+++ b/src/stylus/portfolio.styl
@@ -140,6 +140,7 @@
 // Temp until I can figure out variable height slides
 .portfolio-info
     // height 567px
+    overflow hidden
 
 .portfolio-info__track
     // height 100%
